
## Filters
- Async HTTP request in all filters
- Fixed cors and mime types in httpout for wasm and sharedArrayuffer support
- Allow compilation without threads
- Allow compilation without network
- Fixed GF_FileIO for async read and write modes
- Added seeking in mp4dmx in mem mode
- vout updated to use VBO (required for gles2)
- Allow ffdmx to work as demux filter on gpac input file pids

## Misc
- FFMPEG 6 support
- Added features for configure (vout, aout, fonts, doc, evg)


# 19/12/2022: GPAC 2.2

## Media Formats
- 2-pass encoding for FFmpeg codecs other than libx264
- Conversion filters for VTT, TXG3 and TTML
- SubstationAlpha subtitle import (basic)
- DVB subpictures in M2TS mux and demux
- FFMPEG (mostly for Matroska) subtitle import and export (SRT/SSA to TX3G, TX3G to SRT, WebVTT and DVB subpictures)
- EC3+Atmos signaling support
- ALAC support
- Improved DolbyVision muxing

## Media player
- Subtitle delay and position adjustment
- Audio delay adjustment

## MP4Box
- Allow numbers and media types as identifiers for track actions
- dlba option to update atmos+ec3 signaling

## Filters
- UTC-based range extraction in reframer
- Thumbnail generator filter
- Added unframer filter
- FFMPEG bitstream filters support
- Initseg support in mp4dmx filter
- Access to GPU textures of decoders in Python and JSF bindings (glpush filter for tests)
- Chapters editing and original timestamp dispatch in reformer range extraction 
- Dual in-band and out-of-band parameter set support in dasher
- Non-blocking IO for RTSP and HTTP servers/clients
- RTSP over HTTP in rtsp server
- Source-Specific multicast for udp and rtp inputs
- User Authentication for HTTP and RTSP servers
- TLS support for RTSP client and server
- Per-filter buffering options

## Encryption
- ClearKey support in dasher and decryption

## Misc
- QT metadata tags in MP4Box and qt muxer 
- Support for some packet properties in URL templates

## DEPRECATED
- Removed GF_Terminal API