@@ -1131,35 +1131,49 @@ static const GF_FilterCapability GHIDmxCaps[] =
 GF_FilterRegister GHIDXDmxRegister = {
 	.name = "ghidmx",
 	GF_FS_SET_DESCRIPTION("GHI demultiplexer")
-	GF_FS_SET_HELP("This filter handles pre-indexed content for HAS manifest, init segment and segments just-in-time processing\n"
+	GF_FS_SET_HELP("This filter handles pre-indexed content for just-in-time processing of HAS manifest, init segment and segments\n"
 	"\n"
-	"Indexes must be constructed using the dasher filter and a given segment duration:\n"
+	"# Generating indexes\n"
+	"Indexes are constructed using the dasher filter and a given segment duration.\n"
+	"EX gpac -i SRC [... -i SRCn] -o index.ghi:segdur=2\n"
+	"This constructs a binary index for the DASH session.\n"
 	"EX gpac -i SRC -o index.ghix:segdur=2\n"
+	"This constructs an XML index for the DASH session.\n"
 	"\n"
+	"Warning: XML indexes should only be used for debug purposes as they can take a significant amount of time to be parsed.\n"
+	"\n"
+	"# Using indexes\n"
 	"To generate manifest(s) and init segment(s) from the index, use:\n"
-	"EX gpac -i index.ghix:genman -o dash/vod.mpd\n"
+	"EX gpac -i index.ghi:genman -o dash/vod.mpd\n"
 	"\n"
 	"To generate the 10th segment of representation with ID `FOO`, use:\n"
-	"EX gpac -i index.ghix:rep=FOO:sn=10 -o dash/vod.mpd\n"
-	"Note that the manifest file(s) and init segment(s) are not written when generating a segment.\n"
-	"The manifest target (mpd or m3u8) is only used to setup the filter chain and target output path.\n"
+	"EX gpac -i index.ghi:rep=FOO:sn=10 -o dash/vod.mpd\n"
+	"Note: The manifest file(s) and init segment(s) are not written when generating a segment. The manifest target (mpd or m3u8) is only used to setup the filter chain and target output path.\n"
 	"\n"
-	"The filter ouputs are PIDs using framed packets amrked with segment boundaries and can be chained to other filters before entering the dasher (e.g. for encryption, transcode...).\n"
+	"The filter outputs are PIDs using framed packets marked with segment boundaries and can be chained to other filters before entering the dasher (e.g. for encryption, transcode...).\n"
 	"\n"
-	"Muxed Representations\n"
-	"The filter can be used to generate muxed representations, either at manifest generation time or when geenrating a segment.\n"
+	"If representation IDs are not assigned during index creation, they default to the 1-based index of the source. You can check them using:\n"
+	"EX: gpac -i src.ghi:genman inspect:full\n"
+	"\n"
+	"# Muxed Representations\n"
+	"The filter can be used to generate muxed representations, either at manifest generation time or when generating a segment.\n"
 	"To generate a manifest muxing representations `A` with representations `V1` and `V2` use:\n"
-	"EX gpac -i index.ghix:genman:mux=A-V1-V2 -o dash/vod.mpd\n"
+	"EX gpac -i index.ghi:genman:mux=A-V1-V2 -o dash/vod.mpd\n"
 	"\n"
 	"To generate a manifest muxing representations `A` and `T` with representations `V1` and `V2` use:\n"
-	"EX gpac -i index.ghix:genman:mux=A-V1-V2,T-V1-V2 -o dash/vod.mpd\n"
+	"EX gpac -i index.ghi:genman:mux=A-V1-V2,T-V1-V2 -o dash/vod.mpd\n"
 	"\n"
 	"To generate the 5th segment containing representations `A` and `V2` use:\n"
-	"EX gpac -i index.ghix:rep=V2:sn=5:mux=A-V2 -o dash/vod.mpd\n"
+	"EX gpac -i index.ghi:rep=V2:sn=5:mux=A-V2 -o dash/vod.mpd\n"
 	"\n"
 	"The filter does not store any state, it is the user respansability to use consistent informations across calls:\n"
 	"- do not change segment templates\n"
 	"- do not change muxed representations to configurations not advertised in the generated manifests\n"
+	"\n"
+	"# Recommandations\n"
+	"Indexing currently supports as sources fragmented and non-fragmented MP4 inputs.\n"
+	"It is recommended to use fragmented MP4 as input format since this greatly reduces file loading times.\n"
+	"If non-fragmented MP4 are used, it is recommended to use single-track files to decrease the movie box size and speedup parsing.\n"
 	"\n"
 	)
 	.private_size = sizeof(GHIDmxCtx),
